--- a/RayshiftTranslateFGO/App.xaml
+++ b/RayshiftTranslateFGO/App.xaml
@@ -10,6 +10,7 @@
         <ResourceDictionary>
             <!--Global Styles-->
             <Color x:Key="NavigationPrimary">#2196F3</Color>
+            <Color x:Key="Primary">#1c1c1c</Color>
             <Style TargetType="NavigationPage">
                 <Setter Property="BarBackgroundColor" Value="{StaticResource NavigationPrimary}" />
                 <Setter Property="BarTextColor" Value="White" />
