--- a/RayshiftTranslateFGO/Views/AboutPage.xaml
+++ b/RayshiftTranslateFGO/Views/AboutPage.xaml
@@ -8,6 +8,7 @@
              xmlns:vm="clr-namespace:RayshiftTranslateFGO.ViewModels"
              xmlns:system="clr-namespace:System;assembly=netstandard"
              xmlns:models="clr-namespace:RayshiftTranslateFGO.Models;assembly=RayshiftTranslateFGO"
+             xmlns:resources="clr-namespace:RayshiftTranslateFGO;assembly=RayshiftTranslateFGO"
              NavigationPage.HasNavigationBar="False">
     
     <ContentPage.BindingContext>
@@ -33,9 +34,9 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="Translate FGO" FontAttributes="Bold" FontSize="22" />
+                                <Span Text="Translate Fate/GO" FontAttributes="Bold" FontSize="22" />
                                 <Span Text=" " />
-                                <Span Text="1.0.6" ForegroundColor="{StaticResource LightTextColor}" />
+                                <Span Text="" x:Name="Version" ForegroundColor="{StaticResource LightTextColor}" />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
@@ -44,7 +45,7 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="This simple app allows you to access various story translations for the Japanese version of" />
+                                <Span Text="{x:Static resources:AppResources.AboutFlavourText}" />
                                 <Span Text=" " />
                                 <Span Text="Fate/Grand Order" FontAttributes="Bold" />
                                 <Span Text="." />
@@ -56,7 +57,7 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="Visit rayshift.io for more information." />
+                                <Span Text="{x:Static resources:AppResources.AboutVisitText}" />
 
                             </FormattedString.Spans>
                         </FormattedString>
@@ -66,22 +67,30 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="Artwork credit: 冬木 @ " />
+                                <Span Text="{x:Static resources:AppResources.AboutArtworkCredit}" />
                                 <models:HyperlinkSpan Text="pixiv" Url="https://www.pixiv.net/en/users/2369321" />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Button Margin="0,10,0,0" Text="Learn more"
+                <Button Margin="0,10,0,0" Text="{x:Static resources:AppResources.AboutLearnMore}"
                         Command="{Binding OpenWebCommand}"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
-                <Button Margin="0,10,0,0" Text="Disable auto-update"
+                <Button Margin="0,10,0,0" Text="{x:Static resources:AppResources.RemoveAutoScriptUpdate}"
                         x:Name="AutoUpdate"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
-                <Button Margin="0,10,0,0" Text="Enter pre-release key"
+                <Button Margin="0,10,0,0" Text="{x:Static resources:AppResources.EnterAuthKey}"
                         x:Name="Authentication"
+                        BackgroundColor="{StaticResource Primary}"
+                        TextColor="White" />
+                <Button Margin="0,10,0,0" Text="{x:Static resources:AppResources.AboutRetrySetup}"
+                        x:Name="RetryAndroid11"
+                        BackgroundColor="{StaticResource Primary}"
+                        TextColor="White" />
+                <Button Margin="0,10,0,0" Text="{x:Static resources:AppResources.AboutChangeLanguage}"
+                        x:Name="ChangeLanguage"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
             </StackLayout>
