--- a/RayshiftTranslateFGO/Views/AboutPage.xaml
+++ b/RayshiftTranslateFGO/Views/AboutPage.xaml
@@ -77,6 +77,10 @@
                         Command="{Binding OpenWebCommand}"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
+                <Button Margin="0,10,0,0" Text="{x:Static resources:AppResources.ReopenAnnouncement}"
+                        x:Name="ReopenAnnouncement"
+                        BackgroundColor="{StaticResource Primary}"
+                        TextColor="White" />
                 <Button Margin="0,10,0,0" Text="{x:Static resources:AppResources.RemoveAutoScriptUpdate}"
                         x:Name="AutoUpdate"
                         BackgroundColor="{StaticResource Primary}"
