--- a/RayshiftTranslateFGO/Views/AnnouncementPage.xaml
+++ b/RayshiftTranslateFGO/Views/AnnouncementPage.xaml
@@ -12,7 +12,7 @@
                 </Grid.RowDefinitions>
                 <BoxView Grid.RowSpan="1" BackgroundColor="#191919" Opacity="1.0" />
 
-                <StackLayout VerticalOptions="Center" Spacing="0" Padding="0,0,0,10" x:Name="DefaultLogo">
+                <StackLayout Grid.Row="0" VerticalOptions="Center" Spacing="0" Padding="0,0,0,10" x:Name="DefaultLogo">
                     <Label FontAttributes="Bold" FontFamily="Cabin-Semibold" HorizontalTextAlignment="Center">
                         <Label.FormattedText>
                             <FormattedString>
@@ -30,14 +30,14 @@
                     </Label>
                 </StackLayout>
 
-                <StackLayout IsVisible="False"  VerticalOptions="Center" Spacing="0" Padding="0,0,0,10" x:Name="ImageLogo">
+                <StackLayout Grid.Row="0" IsVisible="False"  VerticalOptions="Center" Spacing="0" Padding="0,0,0,10" x:Name="ImageLogo">
                     <Image x:Name="AnnouncementImage" 
                            VerticalOptions="Fill"
-                           HorizontalOptions="Fill"></Image>
+                           HorizontalOptions="Fill" ></Image>
                 </StackLayout>
 
 
-                <StackLayout Grid.Row="1" Padding="20,30,20,30">
+                <StackLayout Grid.Row="1" Padding="20,30,20,30" x:Name="MainContent">
 
                     <Label Margin="0,0,0,10" Text="Empty placeholder bug" x:Name="AnnouncementTitle" FontAttributes="Bold" HorizontalTextAlignment="Center" FontSize="18" />
                     <Label HorizontalTextAlignment="Center" Text="Empty placeholder body bug" x:Name="AnnouncementBody" Margin="0,0,0,10"/>
