--- a/RayshiftTranslateFGO/Views/SetupPage.xaml
+++ b/RayshiftTranslateFGO/Views/SetupPage.xaml
@@ -50,73 +50,88 @@
                     Value="{StaticResource RadioButtonTemplate}" />
         </Style>
     </ContentPage.Resources>
-    <Grid RowSpacing="0">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <BoxView Grid.RowSpan="1" BackgroundColor="#191919" Opacity="1.0" />
+    <ScrollView>
+        <Grid RowSpacing="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <BoxView Grid.RowSpan="1" BackgroundColor="#191919" Opacity="1.0" />
 
-        <StackLayout VerticalOptions="Center" Spacing="0">
-            <Label FontAttributes="Bold" FontFamily="Cabin-Semibold" HorizontalTextAlignment="Center">
-                <Label.FormattedText>
-                    <FormattedString>
-                        <Span Text="Rayshift" FontSize="50" TextColor="White"/>
-                        <Span Text=".io" FontSize="35" TextColor="#4e88c7"/>
-                    </FormattedString>
-                </Label.FormattedText>
-            </Label>
-            <Label FontAttributes="Bold" FontFamily="Cabin-Semibold" HorizontalTextAlignment="Center">
-                <Label.FormattedText>
-                    <FormattedString>
-                        <Span Text="Translate Fate/GO" FontSize="30" TextColor="White"/>
-                    </FormattedString>
-                </Label.FormattedText>
-            </Label>
-        </StackLayout>
-
-
-        <StackLayout Grid.Row="1" Padding="28">
-            <StackLayout RadioButtonGroup.GroupName="language">
-                <Label Margin="0,0,0,10" Text="{x:Static resources:AppResources.SelectLanguage}" FontAttributes="Bold" HorizontalTextAlignment="Center" FontSize="18" x:Name="SelectLanguageLabel" />
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <RadioButton Value="en-US" HorizontalOptions="CenterAndExpand" CheckedChanged="Language_OnCheckedChanged" x:Name="LanguageEnglish">
-                        <RadioButton.Content>
-                            <StackLayout>
-                                <Image Source="english.png"
-                                       HorizontalOptions="Center"
-                                       VerticalOptions="CenterAndExpand" />
-                                <Label Text="English"
-                                       HorizontalOptions="Center"
-                                       VerticalOptions="End" />
-                            </StackLayout>
-                        </RadioButton.Content>
-                    </RadioButton>
-                    <RadioButton Value="es" Grid.Column="1" HorizontalOptions="CenterAndExpand" CheckedChanged="Language_OnCheckedChanged" x:Name="LanguageSpanish">
-                        <RadioButton.Content>
-                            <StackLayout>
-                                <Image Source="spanish.png"
-                                       HorizontalOptions="Center"
-                                       VerticalOptions="CenterAndExpand" />
-                                <Label Text="Español"
-                                       HorizontalOptions="Center"
-                                       VerticalOptions="End" />
-                            </StackLayout>
-                        </RadioButton.Content>
-                    </RadioButton>
-                </Grid>
-
+            <StackLayout VerticalOptions="Center" Spacing="0">
+                <Label FontAttributes="Bold" FontFamily="Cabin-Semibold" HorizontalTextAlignment="Center">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Rayshift" FontSize="50" TextColor="White"/>
+                            <Span Text=".io" FontSize="35" TextColor="#4e88c7"/>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+                <Label FontAttributes="Bold" FontFamily="Cabin-Semibold" HorizontalTextAlignment="Center">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Translate Fate/GO" FontSize="30" TextColor="White"/>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
             </StackLayout>
 
-            <Button Margin="0,20,0,0" BackgroundColor="{StaticResource Primary}" BorderRadius="2" Text="{x:Static resources:AppResources.SetupButton}" VerticalOptions="End" TextColor="White" x:Name="SetupButton"/>
-        </StackLayout>
 
-    </Grid>
+            <StackLayout Grid.Row="1" Padding="28">
+                <StackLayout RadioButtonGroup.GroupName="language">
+                    <Label Margin="0,0,0,10" Text="{x:Static resources:AppResources.SelectLanguage}" FontAttributes="Bold" HorizontalTextAlignment="Center" FontSize="18" x:Name="SelectLanguageLabel" />
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <RadioButton Value="en-US" Grid.Row="0" HorizontalOptions="CenterAndExpand" CheckedChanged="Language_OnCheckedChanged" x:Name="LanguageEnglish">
+                            <RadioButton.Content>
+                                <StackLayout>
+                                    <Image Source="english.png"
+                                       HorizontalOptions="Center"
+                                       VerticalOptions="CenterAndExpand" />
+                                    <Label Text="English"
+                                       HorizontalOptions="Center"
+                                       VerticalOptions="End" />
+                                </StackLayout>
+                            </RadioButton.Content>
+                        </RadioButton>
+                        <RadioButton Value="es" Grid.Column="1" Grid.Row="0" HorizontalOptions="CenterAndExpand" CheckedChanged="Language_OnCheckedChanged" x:Name="LanguageSpanish">
+                            <RadioButton.Content>
+                                <StackLayout>
+                                    <Image Source="spanish.png"
+                                       HorizontalOptions="Center"
+                                       VerticalOptions="CenterAndExpand" />
+                                    <Label Text="Español"
+                                       HorizontalOptions="Center"
+                                       VerticalOptions="End" />
+                                </StackLayout>
+                            </RadioButton.Content>
+                        </RadioButton>
+                        <RadioButton Value="pt-BR" Grid.Column="0" Grid.Row="1" Margin="0, 10, 0, 0" HorizontalOptions="CenterAndExpand" CheckedChanged="Language_OnCheckedChanged" x:Name="LanguagePtBr">
+                            <RadioButton.Content>
+                                <StackLayout>
+                                    <Image Source="ptbr.png"
+                                       HorizontalOptions="Center"
+                                       VerticalOptions="CenterAndExpand" />
+                                    <Label Text="Português do Brasil"
+                                       HorizontalOptions="Center"
+                                       VerticalOptions="End" FontSize="10"/>
+                                </StackLayout>
+                            </RadioButton.Content>
+                        </RadioButton>
+                    </Grid>
+
+                </StackLayout>
+
+                <Button Margin="0,20,0,0" BackgroundColor="{StaticResource Primary}" BorderRadius="2" Text="{x:Static resources:AppResources.SetupButton}" VerticalOptions="End" TextColor="White" x:Name="SetupButton"/>
+            </StackLayout>
+
+        </Grid>
+    </ScrollView>
 </ContentPage>
