--- a/RayshiftTranslateFGO/Views/PreInitializePage.xaml
+++ b/RayshiftTranslateFGO/Views/PreInitializePage.xaml
@@ -12,7 +12,7 @@
         </Grid.RowDefinitions>
         <BoxView Grid.RowSpan="1" BackgroundColor="#191919" Opacity="1.0" />
 
-        <StackLayout VerticalOptions="Center" Spacing="0" Padding="0,0,0,10">
+        <StackLayout VerticalOptions="Center" Spacing="0" Padding="0,0,0,0">
             <Label FontAttributes="Bold" FontFamily="Cabin-Semibold" HorizontalTextAlignment="Center">
                 <Label.FormattedText>
                     <FormattedString>
@@ -30,19 +30,31 @@
             </Label>
         </StackLayout>
 
-
-        <StackLayout Grid.Row="1" Padding="20,30,20,30">
-
+          <ScrollView Grid.Row="1">
+                    <StackLayout Padding="20,30,20, 10">
             <Label Margin="0,0,0,10" Text="{x:Static resources:AppResources.Android11Setup}" FontAttributes="Bold" HorizontalTextAlignment="Center" FontSize="18" />
             <Label HorizontalTextAlignment="Center" Text="{x:Static resources:AppResources.Android11Setup0}" />
             <Label HorizontalTextAlignment="Center" Text="{x:Static resources:AppResources.Android11Setup1}" />
             <Label HorizontalTextAlignment="Center" Text="{x:Static resources:AppResources.Android11Setup2}" FontAttributes="Bold" />
-            <Image Source="android11.png" Margin="0,25,0,25"/>
 
-            <Button Margin="0,20,0,0" BackgroundColor="{StaticResource Primary}" BorderRadius="2" Text="{x:Static resources:AppResources.AddFolder}" VerticalOptions="End" TextColor="White" x:Name="AddFolderButton"/>
+            <FlexLayout Direction="Column" 
+                        x:Name="PreInitializeInstallView"
+                        AutomationId="FlexLayoutMain">
+                <BindableLayout.ItemTemplate>
+                    <DataTemplate>
+                        <Button Margin="0,20,0,0" BackgroundColor="{StaticResource Primary}" BorderRadius="2" 
+                                Text="{Binding ButtonPreconfigureText}" Command="{Binding ButtonClick}" VerticalOptions="End" 
+                                TextColor="White" IsVisible="{Binding ButtonEnabled}"/>
+                    </DataTemplate>
+                </BindableLayout.ItemTemplate>
+            </FlexLayout>
+            <Button Margin="0,20,0,0" BackgroundColor="{StaticResource Primary}" BorderRadius="2" 
+                    Text="{x:Static resources:AppResources.ReturnHome}" x:Name="ReturnHomeButton" VerticalOptions="End" 
+                    TextColor="White"/>
         </StackLayout>
+        </ScrollView>
 
-    </Grid>
+      </Grid>
       </ScrollView>
     </ContentPage.Content>
 </ContentPage>
