--- a/RayshiftTranslateFGO/Views/SetupPage.xaml
+++ b/RayshiftTranslateFGO/Views/SetupPage.xaml
@@ -85,6 +85,7 @@
                             <RowDefinition Height="*" />
                             <RowDefinition Height="*" />
                             <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -157,6 +158,18 @@
                                            HorizontalOptions="Center"
                                            VerticalOptions="CenterAndExpand" />
                                     <Label Text="简体中文"
+                                           HorizontalOptions="Center"
+                                           VerticalOptions="End" FontSize="10"/>
+                                </StackLayout>
+                            </RadioButton.Content>
+                        </RadioButton>
+                        <RadioButton Value="it" Grid.Column="0" Grid.Row="3" Margin="0, 10, 0, 0" HorizontalOptions="CenterAndExpand" CheckedChanged="Language_OnCheckedChanged" x:Name="LanguageItalian">
+                            <RadioButton.Content>
+                                <StackLayout>
+                                    <Image Source="italian.png"
+                                           HorizontalOptions="Center"
+                                           VerticalOptions="CenterAndExpand" />
+                                    <Label Text="Italiano"
                                            HorizontalOptions="Center"
                                            VerticalOptions="End" FontSize="10"/>
                                 </StackLayout>
